cleaning up, more edits in meta data and some animation in chapters 6-13

--- a/04_Ch_5_Linearity/062-Linear_transforms.ipynb
+++ b/04_Ch_5_Linearity/062-Linear_transforms.ipynb
@@ -172,7 +172,15 @@
    "metadata": {},
    "source": [
     "#### Move a Robot Manipulator and a Camera\n",
-    "\n"
+    "\n",
+    "The [below animation](#pybullet) shows a mobile manipulator that is viewed via a camera in first person view. The different configurations of the robot are shown by translation and rotation of the camera and the robot, all of which are linear transformations. If you are interested, you can run the block of code that is given after the animation on your local PC to actively interact with the camera and the robot as shown [here](#pybullet). You will have to install [PyBullet](https://pybullet.org/wordpress/) for running the code. PyBullet is a physics simulation engine used primarily for robotics applications. \n",
+    "\n",
+    ":::{figure}../figures/06-pybullet_robot_camera.gif\n",
+    ":label:pybullet\n",
+    ":alt:pybullet robot camera\n",
+    ":width: 600px\n",
+    ":align: center\n",
+    ":::"
    ]
   },
   {
