--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Eigenvalues and Eigenvectors\n",
+    "## Eigenvalues and Eigenvectors\n",
     "\n",
     "In this chapter, we will discuss one of the most fundamental elements of linear algebra: the *eigenvalues and eigenvectors* of a square matrix $A$. Eigenvalues and eigenvectors are ubiquitous throughout linear algebra and calculus, and in later sections we'll discuss their applications to the analysis of linear dynamical systems (sections 6.8 and 7.1-7.5).\n",
     "\n",
@@ -72,7 +72,7 @@
     "\n",
     "Our study of eigenvalues and -vectors will begin with a discussion on how we find them.\n",
     "\n",
-    "## Finding the eigenvectors for a known eigenvalue\n",
+    "### Finding the eigenvectors for a known eigenvalue\n",
     "\n",
     "We'll first consider an easier problem.\n",
     "\n",
@@ -175,8 +175,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/053-orthogonal_matrices.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
