--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb
@@ -54,13 +54,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Determinants\n",
+    "## Determinants\n",
     "\n",
     "We assume that you have already seen determinants in Math 1410, and focus here on reviewing the  key properties. Before proceeding, we pause to note that determinants have very deep meanings, especially in differential calculus, as they keep track of volumes as they are transformed via (linear or otherwise) functions. They are indeed very useful theoretical tools, but much like matrix inverses, are rarely computed by hand, except for $2 \\times 2$ cases. Below is a helpful link if you need a refresher on the determinant.\n",
     "\n",
     "* [Math 1410 video lecture (geometric interpretation of the determinant for small matrices)](https://www.youtube.com/watch?v=6hXxrbnbtC4)\n",
     "\n",
-    "## Key Properties of the Determinant\n",
+    "### Key Properties of the Determinant\n",
     "\n",
     "First, we'll state a couple of key facts about the determinant.\n",
     "\n",
@@ -89,7 +89,7 @@
     "\n",
     "These facts (and more) are all derivable from a basic principles of the determinant, but, as with many other topics in mathematics, the rabbit hole goes incredibly deep. For the purpose of studying eigenvalues and eigenvectors this is all we need, but for sake of completeness we included the rest of this page as further information on determinants.\n",
     "\n",
-    "## Optional: An Algebraic Definition of the Determinant\n",
+    "### Optional: An Algebraic Definition of the Determinant\n",
     "\n",
     "As mentioned above, we don't really spend much time working with determinants in this course aside from for computing eigenvalues/vectors. However, for interested students, we will give an algebraic definition of the determinant as well as some methods of finding the determinant of a matrix. This definition is taken from [these notes](https://public.websites.umich.edu/~willdana/Determinant%20Notes.pdf), which explain the connection between the geometric and algebraic interpretations of the determinant.\n",
     "\n",
@@ -260,7 +260,7 @@
     "\n",
     "Try to prove this yourself using the properties we have already proven!\n",
     "\n",
-    "## Optional: Methods of Computing the Determinant\n",
+    "### Optional: Methods of Computing the Determinant\n",
     "\n",
     "In the section, we will review/introduce two way of computing the determinant: the Laplace expansion and the PLU-factorization. \n",
     "\n",
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, with the PLU method, this method is much quicker; as you can see, for smaller matrices it was near instantaneous. A few notes; to find the PLU decomposition of $A$, we used the `scipy.linalg.lu` function, which returns the $L$ and $U$ matrices, as well as either the $P$ matrix or its [representation in one-line notation](#https://en.wikipedia.org/wiki/Permutation#One-line_notation) (this is because permutation matrices are mostly zeros, and can be encoded as just a list of numbers). Also, note the `sign` function we defined; the details aren't important, but this function is essentially a fast way to compute the determinant of a permutation matrix given in one-line notation.\n",
+    "As you can see, with the PLU method, this method is much quicker; as you can see, for smaller matrices it was near instantaneous. A few notes; to find the PLU decomposition of $A$, we used the `scipy.linalg.lu` function, which returns the $L$ and $U$ matrices, as well as either the $P$ matrix or its [representation in one-line notation](https://en.wikipedia.org/wiki/Permutation#One-line_notation) (this is because permutation matrices are mostly zeros, and can be encoded as just a list of numbers). Also, note the `sign` function we defined; the details aren't important, but this function is essentially a fast way to compute the determinant of a permutation matrix given in one-line notation.\n",
     "\n",
     "Finally, let's see how to use the built in functions from `scipy.linalg` (or `numpy.linalg`) to find determinants!"
    ]
@@ -502,14 +502,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/053-orthogonal_matrices.ipynb)"
+    "As you can see, it's really easy, just a single call to the `scipy.linalg.det` function!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, it's really easy, just a single call to the `scipy.linalg.det` function!"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb)"
    ]
   }
  ],
@@ -529,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
