--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/073-characteristic_equations.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/073-characteristic_equations.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Characteristic Equation \n",
+    "## The Characteristic Equation \n",
     "\n",
     "In the previous section, we mentioned that a square matrix $B$ is singular if and only if $\\det (B) = 0$. Combined with [this fact](#eigenvalue-thm), which states that a scalar $\\lambda$ is an eigenvalue of square matrix $A$ if and only if $A - \\lambda I$ was singular, this motivates the following characterization of eigenvalues:\n",
     "\n",
@@ -78,7 +78,7 @@
     "\n",
     "A key property which follows is that $A$ and $A^\\top$ have the same characteristic polynomial (see determinant [Fact 5](#determinant-properties-defn)) and hence the same eigenvalues. We emphasize that they do not, however, have the same eigenvectors!\n",
     "\n",
-    "## Finding the Eigenvalues by Solving the Characteristic Equation\n",
+    "### Finding the Eigenvalues by Solving the Characteristic Equation\n",
     "\n",
     "We now have all the pieces needed to find the eigenvalues for $2\\times2$ matrices (which is all we will ever ask you to compute, unless there is a special structure). This leads to the following method for finding all eigenvalue/vector pairs for a square matrix $A$:\n",
     "\n",
@@ -123,7 +123,7 @@
     "\n",
     "In general, the characteristic equation cannot easily be factored because there is no formula to exactly compute the roots of any polynomial of degree 5 or higher. One way to get around this is to use root-finding algorithms such as [Newton's method](https://en.wikipedia.org/wiki/Newton%27s_method), but these may converge slowly or have numerical issues. In the next section, we'll introduce an algorithm based on the [QR decomposition](#qr-alg) which alleviates these issues.\n",
     "\n",
-    "## Optional: Finding the Characteristic Equation\n",
+    "### Optional: Finding the Characteristic Equation\n",
     "\n",
     "Here, we'll show how to find the characteristic equation, and then solve it for the eigenvalues, in Python. We stress that this method is not used in practice due to being slower than the QR algorithm (the most commonly used eigenvalue algorithm) and having numerical issues. Our aim here is to just demonstrate some applications of ideas we've covered previously in the course in Python.\n",
     "\n",
@@ -222,8 +222,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/053-orthogonal_matrices.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/05_Ch_6_Eigenvalues_and_Eigenvectors/073-characteristic_equations.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
