--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
@@ -54,18 +54,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/053-orthogonal_matrices.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<!-- # Motivations for the QR Algorithm\n",
+    "## Motivations\n",
     "\n",
     "Before we introduce the QR algorithm, we introduce a few motivating definitions.\n",
     "\n",
-    "## Similar Matrices\n",
+    "### Similar Matrices\n",
     "\n",
     "First, we introduce the notion of *similar matrices*:\n",
     "\n",
@@ -96,105 +89,7 @@
     "\n",
     "We will revisit similar matrices in more detail a few sections down the line.\n",
     "\n",
-    "## The Schur Decomposition\n",
-    "\n",
-    "Next, we define the Schur decomposition. The initial definition we will give of the Schur decomposition is for complex matrices. Later, we'll see how to turn this into a more useful theorem for real matrices.\n",
-    "\n",
-    ":::{prf:theorem} The complex Schur decomposition\n",
-    ":label: schur-decomposition-thm\n",
-    "\n",
-    "Every complex square matrix $A$ can be written in the form:\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    A = Q^* U Q.\n",
-    "\\end{align*}\n",
-    "\n",
-    "where $Q$ is a complex *unitary* matrix and $U$ is a complex upper triangular matrix. This is known as a *complex Schur decomposition* of $A$, and in general is not unique.\n",
-    "\n",
-    "Here, for a complex matrix $Q$, the *conjugate transpose* $Q^*$ is the matrix obtained by first transposing $Q$, then taking the complex conjugate of each of the resulting entries. This can be seen as a generalization of transposition for complex matrices, and in the special case that $Q$ is real, we have $Q^* = Q^\\top$.\n",
-    "\n",
-    "If $Q^{-1} = Q^*$, then we say that $Q$ is *unitary*. This can be seen as a generalization of orthogonal matrices for complex matrices.\n",
-    ":::\n",
-    "\n",
-    "It is not immediately obvious why every matrix has a Schur decomposition, but a good proof can be found [here](https://en.wikipedia.org/wiki/Schur_decomposition#Proof). The essence of the proof is to show that, given a complex square matrix $A$, one can always construct a sequence of conjugation operations by unitary matrices (i.e., left multiply by $Q^*$ and right multiply by $Q$) to transform $A$ into an upper triangular matrix.\n",
-    "\n",
-    "Next, we show that given a Schur decomposition $A = Q^\\top U Q$, it's easy to find the eigenvalues of $A$.\n",
-    "\n",
-    "## The Eigenvalues of a Triangular Matrix\n",
-    "\n",
-    "It turns out that it's easy to find the eigenvalues of any triangular square matrix; just look at the diagonal entries!\n",
-    "\n",
-    ":::{prf:theorem} The eigenvalues of a triangular matrix\n",
-    ":label: triangular-eigen-thm\n",
-    "\n",
-    "Let $U$ be a $n\\times n$ triangular matrix. Then, $U$ has eigenvalues $u_{ii}$, for $i = 1, ..., n$. These are the diagonal entries of $U$.\n",
-    ":::\n",
-    "\n",
-    "To see why this is the case, we'll show, for am $n\\times n$ triangular matrix $U$, that $\\det (U - \\lambda I) = 0$ if and only if $\\lambda$ is on the diagonal of $U$:\n",
-    "\n",
-    "* If $U$ is on the diagonal of $U$, then $U - \\lambda I$ has a zero on its diagonal. Convince yourself that this implies that the row echelon form of $U$ can't have $n$ pivots, meaning that $U$ is singular (noninvertible).\n",
-    "\n",
-    "* If $\\lambda$ isn't on the diagonal of $U$, then $U - \\lambda I$ has all nonzero diagonal elements. It thus follows that $U - \\lambda I$ has $n$ pivots, and therefore is nonsingular (invertible).\n",
-    "\n",
-    "We conclude that the eigenvalues of $U$ are exactly its diagonal elements.\n",
-    "\n",
-    "# The QR Algorithm\n",
-    "\n",
-    "Equipped with these facts, the motivation behind the QR algorithm is as follows. \n",
-    "\n",
-    "* First, we find an *approximation* to a Schur decomposition $A = Q^\\top U Q$.\n",
-    "\n",
-    "* The eigenvalues of $A$ are thus the diagonal entries of $U$.\n",
-    "\n",
-    "## Approximating a Schur Decomposition\n",
-    "\n",
-    "The question thus becomes, how do we find an approximate Schur decomposition for $A$? The core idea of the QR algorithm is to use an iterative procedure, which, under certain conditions, converges to a Schur decomposition of $A$.\n",
-    "\n",
-    "* First, we set $A_1 = A$.\n",
-    "\n",
-    "* For $t = 1, 2, \\dots$, let $Q_t R_t = A_t$, with $Q_t$ orthogonal and $R_t$ upper triangular, and define $A_{t + 1} = R_t Q_t = Q_t^\\top A_t Q_t$. In other words, we compute a QR-factorization of $A_t$, and reverse the factors to get $A_{t + 1}$.\n",
-    "\n",
-    "We will not prove this here, but this procedure converges (in the sense that $A_t$ converges to an upper triangular matrix as $t\\to \\infty$) under the assumption that the absolute eigenvalues of $A$ are all distinct. We note that there are more advanced procedures which can get around this assumption, but this basic form of the algorithm highlights the most important ideas.\n",
-    "\n",
-    "To gain some intuition as to why we would hope this procedure to converge to a Schur decomposition of $A$, suppose that $B$ is a fixed point of this procedure, i.e., applying the QR factorization and switching the factors does not change $B$. That is, if $B$ has the QR factorization $B = QR$, then $QR = RQ$, i.e., $Q$ and $R$ commute. In general, this is \"uncommon\"; one such possibility is that $Q = I$, in which case we will have $B = R$. Next, note that for each $t = 1, 2, \\dots$ we have that $A_{t}$ is similar to $A_{t + 1}$ because $A_{t + 1} = Q^\\top A_{t}Q$ for an orthogonal matrix $Q$; convince yourself that this implies that each $A_t$ is similar to $A$. -->\n",
-    "\n",
-    "\n",
-    "# Motivations\n",
-    "\n",
-    "Before we introduce the QR algorithm, we introduce a few motivating definitions.\n",
-    "\n",
-    "## Similar Matrices\n",
-    "\n",
-    "First, we introduce the notion of *similar matrices*:\n",
-    "\n",
-    ":::{prf:definition} Similar matrices\n",
-    ":label: similar-matrices-defn\n",
-    "\n",
-    "We say matrices $n\\times n$ matrices $A$ and $B$ are similar if $B = P^{-1}AP$ for some invertible matrix $P$.\n",
-    ":::\n",
-    "\n",
-    "A key property of similar matrices is that they have the same eigenvalues:\n",
-    "\n",
-    ":::{prf:theorem} Eigenvalues of similar matrices\n",
-    ":label: similar-matrices-thm\n",
-    "\n",
-    "Suppose $A$ and $B$ are similar. Then, $\\lambda$ is an eigenvalue of $A$ if and only if $\\lambda$ is an eigenvalue of $B$.\n",
-    ":::\n",
-    "\n",
-    "To see why this is true, suppose that $\\lambda$ is an eigenvalue of $B$, i.e., $B\\vv v = \\lambda \\vv v$ for some nonzero $\\vv v$. Then, \n",
-    "\n",
-    "\\begin{align*}\n",
-    "    B \\vv v = \\lambda \\vv v &\\implies (P^{-1}AP) \\vv v = \\lambda \\vv v\\\\\n",
-    "    &\\implies A(P \\vv v) = P (\\lambda \\vv v) = \\lambda (P\\vv v)\n",
-    "\\end{align*}\n",
-    "\n",
-    "meaning that $P\\vv v$ is an eigenvector of $A$, with the same eigenvalue of $\\lambda$. \n",
-    "\n",
-    "This motivates the following method: if we want to find the eigenvalues of $B$, we could try to write it in the form $A = P^{-1}BP$, where $B$ is a matrix for which it is easy to find the eigenvalues! This is exactly the motivation for the QR algorithm, which is an iterative algorithm for finding the *Schur decomposition* of $A$.\n",
-    "\n",
-    "We will revisit similar matrices in more detail a few sections down the line.\n",
-    "\n",
-    "## The (Real) Schur Decomposition\n",
+    "### The (Real) Schur Decomposition\n",
     "\n",
     "Next, we define the Schur decomposition. The proof of this claim relies on material covered later in the course, so we won't prove it here.\n",
     "\n",
@@ -214,7 +109,7 @@
     "\n",
     "Note that, given a real Schur decomposition $A = Q^\\top U Q$, it's easy to find the eigenvalues of $A$; we just find the eigenvalues of each diagonal block! To see why, recall [Determinant Fact 4](#determinant-properties-defn). Since $U$ is quasi-upper triangular, its diagonal blocks are all $1\\times 1$ or $2\\times 2$ matrices, which have easy to solve characteristic equations, so it's easy to find their eigenvalues.\n",
     "\n",
-    "# The QR Algorithm\n",
+    "## The QR Algorithm\n",
     "\n",
     "Equipped with these facts, the motivation behind the QR algorithm is as follows. \n",
     "\n",
@@ -222,7 +117,7 @@
     "\n",
     "* The eigenvalues of $A$ are thus the diagonal entries of $U$.\n",
     "\n",
-    "## Approximating a Real Schur Decomposition\n",
+    "### Approximating a Real Schur Decomposition\n",
     "\n",
     "The question thus becomes, how do we find an approximate Schur decomposition for $A$? One idea is repeatedly apply the QR decomposition to iteratively find similar matrices to $A$. In the case that all eigenvalues are distinct, this actually converges to the Schur decomposition.\n",
     "\n",
@@ -240,7 +135,7 @@
     "\n",
     "The mechanism of why this algorithm works can be described by two phenomena. First, each subsequent $A_{t+1}$ is similar to the previous $A_t$ so we know that eigenvalues are preserved over each iteration. Second, in each interation the elements below the diagonal get smaller and vice versa for those above (showing why this property holds is beyond the scope of this course). This means that over many iterations the elements below the diagonal effectively become 0, making $A_\\infty$ a upper-triangular matrix.\n",
     "\n",
-    "# Pseudocode for the QR Algorithm\n",
+    "## Pseudocode for the QR Algorithm\n",
     "\n",
     "We are now ready to give the pseudocode for the QR Algorithm.\n",
     "\n",
@@ -258,18 +153,18 @@
     "**return** the eigenvalues of $A_{T + 1}$\n",
     ":::\n",
     "\n",
-    "# Python Implementations of the QR Algorithm\n",
+    "## Python Implementations of the QR Algorithm\n",
     "\n",
     "We are now ready to use the QR Algorithm to find eigenvalues in Python. \n",
     "\n",
-    "## From Scratch\n",
+    "### From Scratch\n",
     "\n",
     "First, we'll give an implementation of the Schur decomposition from scratch. We won't reimplement a QR factorization algorithm, so if you're interested in seeing the implementation for that, it can be found [on this page (scroll down)](#qr-alg)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -307,14 +202,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using `numpy.linalg.eigvals`\n",
+    "### Using `numpy.linalg.eigvals`\n",
     "\n",
     "Next, we'll use the `numpy.linalg.eigvals` function, which returns the eigenvalues of a square matrix. Under the hood, `numpy.linalg.eigvals` is based off of a more advanced version of the basic QR algorithm we outlined above. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -343,6 +238,20 @@
    "source": [
     "Verify for yourself that the real eigenvalues returned by `numpy.linalg.eigvals` are the diagonal $1\\times 1$ blocks of the Schur form of the input matrix, which we found above. You can also verify that the complex eigenvalues returned by `numpy.linalg.eigvals` are the eigenvalues of the $2\\times 2$ block diagonal."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath-/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -361,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
