--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/075-eigenspaces.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/075-eigenspaces.ipynb
@@ -52,14 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/053-orthogonal_matrices.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Eigenspaces\n",
+    "## Eigenspaces\n",
     "\n",
     "Before we introduce the notion of an *eigenspace*, let's first consider a motivating example:\n",
     "\n",
@@ -125,6 +118,20 @@
     "$\\lambda = 0$ is an eigenvalue of $A$ if and only if $\\text{Null}(A) \\neq \\{\\vv 0\\}$, i.e., $A$ is singular.\n",
     ":::"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/05_Ch_6_Eigenvalues_and_Eigenvectors/075-eigenspaces.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -143,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
