--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/076-repeated_complex_eigenvalues.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/076-repeated_complex_eigenvalues.ipynb
@@ -53,14 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/053-orthogonal_matrices.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Repeated Eigenvalues\n",
+    "## Repeated Eigenvalues\n",
     "\n",
     "Recall [this example](#eigen-ex3) from a few pages ago where we say an example of a $3\\times 3$ matrix with a double eigenvalue:\n",
     "\\begin{align*}\n",
@@ -92,7 +85,7 @@
     "\n",
     "For the next few lectuers, we will avoid such degenerate examples, but we will read how to handle them when we study a motivating application of linear dynamical systems a few pages down the line.\n",
     "\n",
-    "# Complex Eigenvalues\n",
+    "## Complex Eigenvalues\n",
     "\n",
     "So far, all of the examples we've considered have had *real* eigenvalues. In general, however, complex eigenvalues (and eigenvectors) are also important. We will assume you already have previous experience working with complex numbers, particularly finding complex roots of polynomial equations, but a quick refresher can be found here:\n",
     "\n",
@@ -141,7 +134,7 @@
     "\n",
     "* The eigenvalues for our example, which defines a pure rotation in $\\mathbb{R}^2$, are purely imaginary. This isn't a coincidence! When we discuss symmetric and skew symmetric matrices later in this class, this will be further explained, but for now, you should start associating imaginary components of eigenvalues with rotations.\n",
     "\n",
-    "# Basic Properties of Eigenvalues\n",
+    "## Basic Properties of Eigenvalues\n",
     "\n",
     "We want to belabor the derivation of the following properties of eigenvalues: they mostly follow from properties of the determinant and the Funamental Theorem of Algebra (which states that any degree $n$ polynomial equation with complex coefficients has exactly $n$ complex roots, counting multiplicities). The TLDR is that for any $A \\in \\mathbb{R}^{n\\times n}$, its characteristic polynomial is a degree $n$ polynomial with real coefficients and can thus be factored as:\n",
     "\\begin{align*}\n",
@@ -154,6 +147,13 @@
     "\n",
     "An $n\\times n$ real matrix has at least one, and at most $n$, distinct eigenvalues.\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath-/05_Ch_6_Eigenvalues_and_Eigenvectors/076-repeated_complex_eigenvalues.ipynb)"
    ]
   }
  ],
@@ -173,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
