--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Eigenbases\n",
+    "## Eigenbases\n",
     "\n",
     "Most of the vector space bases that are useful in applications are assembled from the eigenvectors of a particular matrix. In this section, we focus on matrices with a \"complete\" set of eigenvectors and show how these form a basis for $\\mathbb{R}^n$ (or in the complex case, $\\mathbb{C}^n$); in these cases, the set of their eigenvectors are known as eigenbases:\n",
     "\n",
@@ -104,7 +104,7 @@
     "The collection $\\vv{v_1}, \\vv{\\hat {v_1}}, \\vv{v_2} \\in \\mathbb{R}^3$ are linearly independent, and hence form a basis for $\\mathbb{R}^3$ since $\\dim \\mathbb{R}^3 = 3$.\n",
     ":::\n",
     "\n",
-    "# Algebraic and Geometric Multiplicities\n",
+    "## Algebraic and Geometric Multiplicities\n",
     "\n",
     "Notice that in this last example $\\dim V_{\\lambda_1} = 2$ (why?) for the double eigenvalue $\\lambda_1 = 2$ (i.e., the [eigenspace](#eigenspace-defn) corresponding to $\\lambda_1$ had dimension of 2), and similarly, $\\dim V_{\\lambda_2} = 1$ for the simple eigenvalue $\\lambda_2 = 4$, so that there is a \"real\" eigenvector for each time an eigenvalue appears as a factor of the characteristic polynomial.\n",
     "\n",
@@ -130,7 +130,7 @@
     "\n",
     "For the next little bit, we will assume that our matrix $A$ satisfies the above theorem. What does this buy us? To answer this question, we need to introduce the idea of *similarity transformations*.\n",
     "\n",
-    "# Similar Matrices\n",
+    "## Similar Matrices\n",
     "\n",
     "Given a vector $\\vv x \\in\\mathbb{R}^n$ with coordinates $x_i$ with respect to the standard basis, i.e., $\\vv x = x_1 \\vv{e_1} + x_2 \\vv{e_2} + ... + x_n \\vv{e_n}$, we can find the coordinates $y_1,..., y_n$ of $\\vv x$ with respect to a new basis $\\vv{b_1}, ..., \\vv{b_n}$ by solving the following linear system:\n",
     "\n",
@@ -177,7 +177,7 @@
     "and the map $g(\\vv y) = B^{-1}AB\\vv y$ takes $\\bm y_1\\\\y_2\\em \\mapsto \\bm 5y_1 + 2y_2\\\\-8y_1 - 3y_2\\em$.\n",
     ":::\n",
     "\n",
-    "# Diagonalization\n",
+    "## Diagonalization\n",
     "\n",
     "In the above example, our change of basis didn't really help us understand what the linear transformation $f(\\vv x)$ is doing any better than our starting point. However, we'll see how that if we use the basis defiend by the eigenvectors of a matrix, some magic happens! We'll start with an example, and then extract out a general conclusion.\n",
     "\n",
@@ -368,6 +368,20 @@
    "source": [
     "As you can see, finding a diagonalization in Python is really easy! The `numpy.linalg.eig` function returns the eigenvectors in a matrix and the eigenvalues (conveniently, it has the eigenvalues in the same order as the corresponding eigenvectors)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath-/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
