--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
@@ -55,11 +55,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Dynamical Systems\n",
+    "## Linear Dynamical Systems\n",
     "\n",
     "A *dynamical system* refers to the differential equations governing the change of a system over time. This system can be mechanical, electrical, fluid, biological, financial, or even social. In this page, we will learn how to solve special differential equations describing *linear dynamical systems*. We will draw heavily on the concepts of eigenvalues and eigenvectors covered in the previous pages.\n",
     "\n",
-    "## Scalar Ordinary Differential Equations\n",
+    "### Scalar Ordinary Differential Equations\n",
     "\n",
     "Let's remind ourselves of the solution to first order scalar ordinary differential equations (ODEs), which take the form\n",
     "\n",
@@ -131,7 +131,7 @@
     "\n",
     "![alt text](../figures/04-linear_ode_stability.png)\n",
     "\n",
-    "## First Order Dynamical Systems\n",
+    "### First Order Dynamical Systems\n",
     "\n",
     "We will concerntrate most of our attention on *homogenous linear time-invariant first order dynamical systems*. \n",
     "\n",
@@ -181,7 +181,7 @@
     "\n",
     "Therefore [(GUESS)](expr:GUESS) solves [(LTI)](expr:LTI) if and only if $\\lambda \\vv v = A \\vv v$. Note that this is precisely the definition of an [eigenvalue/eigenvector](#eigen-defn) pair, which we've studied extensively in the previous few pages! For the rest of this page, we'll look at how the facts we've learend about eigenvalues and eigenvectors play a role in the solution to linear ODEs.\n",
     "\n",
-    "# Eigenvalues and Eigenvectors in Linear ODEs\n",
+    "## Eigenvalues and Eigenvectors in Linear ODEs\n",
     "\n",
     "A key obesrvation is that we can reduce solving [(LTI)](#expr:LTI) to solving $n$ independent scalar ODEs when the matrix $A$ is [diagonalizable](#diagonalizable-defn). Let $V = \\bm \\vv{v_1} & \\vv{v_2} & \\dots & \\vv{v_n}\\em$ be the $n\\times n$ matrix of the eigenvectors of $A$, and $D = \\text{diag}(\\lambda_1, \\dots, \\lambda_n)$, the diagonal matrix of corresponding eigenvalues. Then $A = VDV^{-1}$ so that \n",
     "\n",
@@ -218,7 +218,7 @@
     "\n",
     "where we remember that $\\vv c = V^{-1} u(t_0)$. \n",
     "\n",
-    "## Solving Linear ODEs when $A$ is Diagonalizable\n",
+    "### Solving Linear ODEs when $A$ is Diagonalizable\n",
     "\n",
     "In the previous section, we just showed something incredibly powerful, which we summarize in the following theorem.\n",
     "\n",
@@ -272,6 +272,13 @@
     "\n",
     "* [(SOL)](#expr:SOL) does not hold if a matrix is not diagonalizable. We'll see a brief preview of how to deal with matrices we can't diagonalize later (you'll see much more in ESE 2100).\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath-/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb)"
    ]
   },
   {
