--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb
@@ -487,6 +487,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b909107-c6df-4ba3-9105-13c020e3a677",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0de7db8c-9a28-467d-a658-a6583f6c727c",
    "metadata": {
     "editable": true,
@@ -526,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
