--- a/09_Ch_10_Singular_Value_Decomposition/112-Lin_Alg_Apps.ipynb
+++ b/09_Ch_10_Singular_Value_Decomposition/112-Lin_Alg_Apps.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_SVD_Apps/112-Lin_Alg_Apps.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_Singular_Value_Decomposition/112-Lin_Alg_Apps.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 18 - Singular Values and the Singular Value Decomposition.pdf>`"
    ]
@@ -79,7 +79,7 @@
     "\n",
     "In this section, we'll demonstrate the significance of the condition number of the coefficient matrix $A$ when solving a system of linear equations $A\\vv x = \\vv b$ (where in this example, we assume $A$ is square and invertible). We'll give a few illustrative examples of what might go wrong when $A$ has a high condition number $\\kappa(A)$.\n",
     "\n",
-    "**Sensitivity to the constant vector $b$.** Let's consider what happens when the constant vector $\\vv b$ is replace by the vector $\\vv b + \\vv \\epsilon$, where $\\epsilon$ is some vector representing a \"measurement error\" in $\\vv b$. Let's rewrite the linear system $A\\vv x = \\vv b + \\vv \\epsilon$ as the following:\n",
+    "**Sensitivity to the constant vector $b$:** Let's consider what happens when the constant vector $\\vv b$ is replace by the vector $\\vv b + \\vv \\epsilon$, where $\\epsilon$ is some vector representing a \"measurement error\" in $\\vv b$. Let's rewrite the linear system $A\\vv x = \\vv b + \\vv \\epsilon$ as the following:\n",
     "\n",
     "$$\n",
     "&A\\vv x = \\vv b + \\vv \\epsilon \\\\\n",
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_SVD_Apps/112-Lin_Alg_Apps.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_Singular_Value_Decomposition/112-Lin_Alg_Apps.ipynb)"
    ]
   }
  ],
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
