--- a/09_Ch_10_Singular_Value_Decomposition/114-recommender_systems.ipynb
+++ b/09_Ch_10_Singular_Value_Decomposition/114-recommender_systems.ipynb
@@ -31,7 +31,7 @@
    "id": "7ec41545-6544-46c0-b962-3e45a227dce8",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_SVD_Apps/114-recommender_systems.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_Singular_Value_Decomposition/114-recommender_systems.ipynb)\n",
     "\n",
     "\n",
     "## Learning Objectives\n",
@@ -606,6 +606,22 @@
     "\n",
     "Even within this simple SVD based approach for developing a recommender system, there are many options that we can choose as engineers to tune the performance of the system. The two most critical are 1) the way in which the crude initial imputation is performed, and 2) the rank of the ratings matrix that we should assume. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d45f99ee-ab7a-4d72-b31f-abe576a6dd6c",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_Singular_Value_Decomposition/114-recommender_systems.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b67906e-1ce0-442b-8830-f77c970ae5fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -624,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
