--- a/10_Ch_11_Principal_Component_Analysis/121-Basics_of_Statistics.ipynb
+++ b/10_Ch_11_Principal_Component_Analysis/121-Basics_of_Statistics.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_Principal_Component_Analysis/121-Basics_of_Statistics.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 19 - Principal Component Analysis with Applications to Imaging and Data Compression.pdf>`"
    ]
@@ -45,7 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- the idea of studying only important features of an image\n",
+    "- what is an observation matrix\n",
+    "- the sample mean and covariance of observations with some examples "
    ]
   },
   {
@@ -63,7 +65,7 @@
     "\n",
     "The seven Landsat images of a given region typically contain a lot of redundant information, as some features will appear across most channels. However, other features, because of their color or temperature, may only appear in one or two channels. A goal of multispectral image processing is to view the data in a way that extracts information better than studying each image separately.\n",
     "\n",
-    "One approach, called _Principal Component Analysis (PCA)_, seeks to find a special linear combination of the data that takes a weighted combination of all seven images into just one or two images. Importantly, we want these one or two composite images. or _principal components_ to capture as much of the scene variance (features) as possibl; in particular, features should be more visible in the composite images than any of the original individual ones.\n",
+    "One approach, called _Principal Component Analysis (PCA)_, seeks to find a special linear combination of the data that takes a weighted combination of all seven images into just one or two images. Importantly, we want these one or two composite images. or _principal components_ to capture as much of the scene variance (features) as possible; in particular, features should be more visible in the composite images than any of the original individual ones.\n",
     "\n",
     "This idea, which we'll explore in detail today, is illustrated with some Landsat imagery taken over Railroad Valley Nevada.\n",
     "\n",
@@ -284,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_Principal_Component_Analysis/121-Basics_of_Statistics.ipynb)\n"
    ]
   }
  ],
