--- a/10_Ch_11_Principal_Component_Analysis/122-PCA.ipynb
+++ b/10_Ch_11_Principal_Component_Analysis/122-PCA.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/122-PCA.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_Principal_Component_Analysis/122-PCA.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 19 - Principal Component Analysis with Applications to Imaging and Data Compression.pdf>`"
    ]
@@ -45,7 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- the definition of principal components of a data set and an example of it\n",
+    "- how to compress the data via dimensionality reduction\n",
+    "- how to compute the principal components using the Singular Value Decomposition"
    ]
   },
   {
@@ -214,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/122-PCA.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_Principal_Component_Analysis/122-PCA.ipynb)\n"
    ]
   },
   {
