--- a/10_Ch_11_Principal_Component_Analysis/123-eigenfaces.ipynb
+++ b/10_Ch_11_Principal_Component_Analysis/123-eigenfaces.ipynb
@@ -31,7 +31,7 @@
    "id": "980dfbcb-8a63-42e1-865c-f33a724d1e1b",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/123-Eigenfaces.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_Principal_Component_Analysis/123-eigenfaces.ipynb)\n",
     "\n",
     "\n",
     "## Learning Objectives\n",
@@ -598,6 +598,14 @@
    "metadata": {},
    "source": [
     "We see that while still lossy, using several hundred components leads to very good recovery, even though we're using less than half of the data used to store the original image!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "260560c8-bafe-412f-a467-d49ddc1ae8e2",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_Principal_Component_Analysis/123-eigenfaces.ipynb)\n"
    ]
   }
  ],
