--- a/11_Ch_12_Low_Rank_Approximation/132-MatrixNorm.ipynb
+++ b/11_Ch_12_Low_Rank_Approximation/132-MatrixNorm.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/11_Ch_12_Low_Rank/132-MatrixNorm.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/11_Ch_12_Low_Rank_Approximation/132-MatrixNorm.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 20 - Low-Rank Matrix Approximations via the SVD with applications to matrix completion and recommender systems.pdf>`"
    ]
@@ -238,7 +238,7 @@
    "source": [
     "Finally, we address an obvious question when applying these ideas in practice: **how should we pick the rank $k$ of our approximation?**\n",
     "\n",
-    "In a perfect world, the singular values of the original data matrix will give strong guidance: if the top few singular values are much larger than the rest, then the obvious solution is to take $k = \\#$ of big values. This was the case in the handset example previous lecture: the 1st singular value was significantly larger than others, suggesting a rank 1 approximation would be a good choice (which was the [image (d)](./121-Basics_of_Statistics.ipynb#railroad)).\n",
+    "In a perfect world, the singular values of the original data matrix will give strong guidance: if the top few singular values are much larger than the rest, then the obvious solution is to take $k = \\#$ of big values. This was the case in the handset example previous lecture: the 1st singular value was significantly larger than others, suggesting a rank 1 approximation would be a good choice (which was the [image (d)](../10_Ch_11_Principal_Component_Analysis/121-Basics_of_Statistics.ipynb#railroad)).\n",
     "\n",
     "In less clear settings, the rule of thumb is to take $k$ as small as possible while still providing a \"useful\" approximation of the original data. For example, it is common to choose $k$ so that the sum of the top k singular values is at least $c$ times larger than the sum of the other singular values. The ratio $c$ is typically a domain-dependent constant picked based on the application."
    ]
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/11_Ch_12_Low_Rank/132-MatrixNorm.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/11_Ch_12_Low_Rank_Approximation/132-MatrixNorm.ipynb)\n"
    ]
   }
  ],
