--- a/12_Ch_13_Optimization/144-SGD.ipynb
+++ b/12_Ch_13_Optimization/144-SGD.ipynb
@@ -38,10 +38,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading\n",
-    "\n",
-    "Material related to this page, as well as additional exercises, can be ...\n",
-    "\n",
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
@@ -209,7 +205,7 @@
     "\n",
     "This algorithm goes through the examples $(\\vv z_i,y_i)$ one at a time, and updates the classifier only when it makes a mistake [](#update). The intuition is it \"nudges\" the classifier to be \"less\" wrong by $\\|\\vv z_i\\|^2+1$ on any example $(\\vv z_i,y_i)$ it currently misclassifies.\n",
     "\n",
-    "This incremental update works, and you can show that if there exists a solution to [](#LC), the perceptron algorithm will find it. People got _REALLY EXCITED ABOUT THIS_. See [below](#NYT) for a NYT article about the perceptron algorithm, which in hindsight seems a little silly given that we now know it's just SGD applied to a particular loss function. But then again, so is most of today's AI!\n",
+    "This incremental update works, and you can show that if there exists a solution to [](#LC), the perceptron algorithm will find it. People got _REALLY EXCITED ABOUT THIS!_ See [below](#NYT) for a NYT article about the perceptron algorithm, which in hindsight seems a little silly given that we now know it's just SGD applied to a particular loss function. But then again, so is most of today's AI!\n",
     "\n",
     ":::{figure}../figures/14-NYT.jpg\n",
     ":label:NYT\n",
@@ -544,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
