--- a/12_Ch_13_Optimization/143-backprop.ipynb
+++ b/12_Ch_13_Optimization/143-backprop.ipynb
@@ -322,7 +322,7 @@
     "\n",
     "where $\\frac{\\partial \\ell}{\\partial \\vv m_j}$ will have been computed at the layer above. This is another key piece of backpropagation!\n",
     "\n",
-    "The only thing left to compute is $\\frac{\\partial \\vv m_j}{\\partial \\vv x_j}$ --- this is now just an exercise in calculus, so we'll not work it out by hand class, but the **TO DO**: online notes will provide links to pages with further automation for those interested."
+    "The only thing left to compute is $\\frac{\\partial \\vv m_j}{\\partial \\vv x_j}$ --- this is now just an exercise in calculus, so we'll not work it out by hand. Please refer to [](https://en.wikipedia.org/wiki/Backpropagation#Finding_the_derivative_of_the_error) and [](https://cs231n.stanford.edu/slides/2018/cs231n_2018_ds02.pdf) for further information if you are interested."
    ]
   },
   {
@@ -334,7 +334,7 @@
     "We apply our chain rule $\\left( \\text{with } \\vv w = X_j \\bm \\vv O_{j-1} \\\\ 1\\em\\right)$ to get\n",
     "\n",
     "\\begin{equation*}\n",
-    "\\frac{\\partial \\vv m_j}{\\partial \\vv x_j} = \\frac{\\partial}{\\partial x_j} \\sigma\\left(X_j \\bm \\vv O_{j-1} \\\\ 1\\em\\right) = \\frac{\\partial \\vv \\sigma}{\\partial \\vv w} \\cdot \\frac{\\partial \\vv w}{\\partial \\vv x_j}\n",
+    "\\frac{\\partial \\vv m_j}{\\partial \\vv x_j} = \\frac{\\partial}{\\partial x_j} \\sigma\\left(X_j \\bm \\vv O_{j-1} \\\\ 1\\em\\right) = \\frac{\\partial \\vv \\sigma}{\\partial \\vv w} \\cdot \\frac{\\partial \\vv w}{\\partial \\vv x_j}.\n",
     "\\end{equation*}\n",
     "\n",
     "Now for $\\vv \\sigma(\\vv w) = \\begin{bmatrix} \\vv \\sigma(w_1) \\\\ \\vdots \\\\ \\sigma(w_{p_{j-1}}) \\end{bmatrix}, \\frac{\\partial \\sigma}{\\partial \\vv w} = \\begin{bmatrix} \\sigma'(w_1) &  & \\\\&  \\ddots & \\\\& &  \\sigma'(w_{p_{j-1}}) \\end{bmatrix}$. Next, we need to find $\\frac{\\partial \\vv w}{\\partial \\vv x_j} = \\frac{\\partial}{\\partial \\vv x_j} \\left(X_j \\bm \\vv O_{j-1} \\\\ 1\\em \\right).$ This can be computed using multi linear algebra (tensors). We won't work it out, but note that it can be found efficiently."
